--- a/Assignment3/Views/ComponentCategories/Create.cshtml
+++ b/Assignment3/Views/ComponentCategories/Create.cshtml
@@ -8,8 +8,10 @@
 
 <h4>Category</h4>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
+        <img src="favicon.ico" />
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
