--- a/Assignment3/Views/Components/CreateComponent.cshtml
+++ b/Assignment3/Views/Components/CreateComponent.cshtml
@@ -10,48 +10,50 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        @using(Html.BeginForm("Create", "Components", FormMethod.Post)) { }
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ComponentTypeId" class="control-label"></label>
-                <input asp-for="ComponentTypeId" class="form-control"/>
-                <span asp-validation-for="ComponentTypeId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ComponentNumber" class="control-label"></label>
-                <input asp-for="ComponentNumber" class="form-control"/>
-                <span asp-validation-for="ComponentNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SerialNo" class="control-label"></label>
-                <input asp-for="SerialNo" class="form-control"/>
-                <span asp-validation-for="SerialNo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AdminComment" class="control-label"></label>
-                <input asp-for="AdminComment" class="form-control"/>
-                <span asp-validation-for="AdminComment" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UserComment" class="control-label"></label>
-                <input asp-for="UserComment" class="form-control"/>
-                <span asp-validation-for="UserComment" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CurrentLoanInformationId" class="control-label"></label>
-                <input asp-for="CurrentLoanInformationId" class="form-control"/>
-                <span asp-validation-for="CurrentLoanInformationId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default"/>
-            </div>
-        </form>
+        @using (Html.BeginForm("Create", "Components", FormMethod.Post))
+        {
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="ComponentTypeId" class="control-label"></label>
+                    <input asp-for="ComponentTypeId" class="form-control" />
+                    <span asp-validation-for="ComponentTypeId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ComponentNumber" class="control-label"></label>
+                    <input asp-for="ComponentNumber" class="form-control" />
+                    <span asp-validation-for="ComponentNumber" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="SerialNo" class="control-label"></label>
+                    <input asp-for="SerialNo" class="form-control" />
+                    <span asp-validation-for="SerialNo" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Status" class="control-label"></label>
+                    <select asp-for="Status" asp-items="@Html.GetEnumSelectList<ComponentStatus>()" class="form-control"></select>
+                    <span asp-validation-for="Status" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="AdminComment" class="control-label"></label>
+                    <input asp-for="AdminComment" class="form-control" />
+                    <span asp-validation-for="AdminComment" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="UserComment" class="control-label"></label>
+                    <input asp-for="UserComment" class="form-control" />
+                    <span asp-validation-for="UserComment" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CurrentLoanInformationId" class="control-label"></label>
+                    <input asp-for="CurrentLoanInformationId" class="form-control" />
+                    <span asp-validation-for="CurrentLoanInformationId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-default" />
+                </div>
+            </form>
+        }
     </div>
 </div>
 
