- Higher level problem solving

--- a/Assignment3/Views/Components/CreateComponent.cshtml
+++ b/Assignment3/Views/Components/CreateComponent.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Component
 
 @{
-    ViewBag.Title = "Create New Component";
-    Layout = "";
+    ViewData["Title"] = "Create New Component";
+    Layout = "_Layout";
 }
 <html>
 <head>
