--- a/Assignment3/Views/ComponentTypes/Create.cshtml
+++ b/Assignment3/Views/ComponentTypes/Create.cshtml
@@ -43,12 +43,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ComponentName" class="control-label"></label>
+                <label asp-for="ComponentName" class="control-label">Component Name</label>
                 <input asp-for="ComponentName" class="form-control" />
                 <span asp-validation-for="ComponentName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ComponentInfo" class="control-label"></label>
+                <label asp-for="ComponentInfo" class="control-label">Component Info</label>
                 <input asp-for="ComponentInfo" class="form-control" />
                 <span asp-validation-for="ComponentInfo" class="text-danger"></span>
             </div>
@@ -59,7 +59,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
+                <select asp-for="Status" asp-items="@Html.GetEnumSelectList<ComponentTypeStatus>()" class="form-control"></select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -68,7 +68,7 @@
                 <span asp-validation-for="Datasheet" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageUrl" class="control-label"></label>
+                <label asp-for="ImageUrl" class="control-label">Image Url</label>
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
@@ -78,12 +78,12 @@
                 <span asp-validation-for="Manufacturer" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="WikiLink" class="control-label"></label>
+                <label asp-for="WikiLink" class="control-label">Wiki Link</label>
                 <input asp-for="WikiLink" class="form-control" />
                 <span asp-validation-for="WikiLink" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AdminComment" class="control-label"></label>
+                <label asp-for="AdminComment" class="control-label">Admin Comment</label>
                 <input asp-for="AdminComment" class="form-control" />
                 <span asp-validation-for="AdminComment" class="text-danger"></span>
             </div>
