--- a/Assignment3/Views/ComponentTypes/Edit.cshtml
+++ b/Assignment3/Views/ComponentTypes/Edit.cshtml
@@ -44,12 +44,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ComponentTypeId" />
             <div class="form-group">
-                <label asp-for="ComponentName" class="control-label"></label>
+                <label asp-for="ComponentName" class="control-label">Component Name</label>
                 <input asp-for="ComponentName" class="form-control" />
                 <span asp-validation-for="ComponentName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ComponentInfo" class="control-label"></label>
+                <label asp-for="ComponentInfo" class="control-label">Component Info</label>
                 <input asp-for="ComponentInfo" class="form-control" />
                 <span asp-validation-for="ComponentInfo" class="text-danger"></span>
             </div>
@@ -60,7 +60,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
+                <select asp-for="Status" asp-items="@Html.GetEnumSelectList<ComponentTypeStatus>()" class="form-control"></select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -69,7 +69,7 @@
                 <span asp-validation-for="Datasheet" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageUrl" class="control-label"></label>
+                <label asp-for="ImageUrl" class="control-label">Image Url</label>
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
@@ -79,12 +79,12 @@
                 <span asp-validation-for="Manufacturer" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="WikiLink" class="control-label"></label>
+                <label asp-for="WikiLink" class="control-label">Wiki Link</label>
                 <input asp-for="WikiLink" class="form-control" />
                 <span asp-validation-for="WikiLink" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AdminComment" class="control-label"></label>
+                <label asp-for="AdminComment" class="control-label">Admin Comment</label>
                 <input asp-for="AdminComment" class="form-control" />
                 <span asp-validation-for="AdminComment" class="text-danger"></span>
             </div>
