--- a/Assignment3/Views/ComponentTypes/Edit.cshtml
+++ b/Assignment3/Views/ComponentTypes/Edit.cshtml
@@ -36,9 +36,9 @@
         <div class="sk-rect5"></div>
     </div>
 </div>
-<h2>Edit</h2>
+<h2>Edit Component Type</h2>
 
-<h4>ComponentType</h4>
+<h4>Component Type</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -46,12 +46,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ComponentTypeId" />
             <div class="form-group">
-                <label asp-for="ComponentName" class="control-label"></label>
+                <label asp-for="ComponentName" class="control-label">Component Name</label>
                 <input asp-for="ComponentName" class="form-control" />
                 <span asp-validation-for="ComponentName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ComponentInfo" class="control-label"></label>
+                <label asp-for="ComponentInfo" class="control-label">Component Info</label>
                 <input asp-for="ComponentInfo" class="form-control" />
                 <span asp-validation-for="ComponentInfo" class="text-danger"></span>
             </div>
@@ -71,7 +71,7 @@
                 <span asp-validation-for="Datasheet" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageUrl" class="control-label"></label>
+                <label asp-for="ImageUrl" class="control-label">Image Url/Image Source</label>
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
@@ -81,12 +81,12 @@
                 <span asp-validation-for="Manufacturer" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="WikiLink" class="control-label"></label>
+                <label asp-for="WikiLink" class="control-label">Wiki Link</label>
                 <input asp-for="WikiLink" class="form-control" />
                 <span asp-validation-for="WikiLink" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AdminComment" class="control-label"></label>
+                <label asp-for="AdminComment" class="control-label">Admin Comment</label>
                 <input asp-for="AdminComment" class="form-control" />
                 <span asp-validation-for="AdminComment" class="text-danger"></span>
             </div>
