--- a/Assignment3/Views/ComponentCategories/ComponentCategoriesIndex.cshtml
+++ b/Assignment3/Views/ComponentCategories/ComponentCategoriesIndex.cshtml
@@ -45,7 +45,7 @@
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.Name)
+                    @Html.DisplayName("Component Category")
                 </th>
                 <th></th>
             </tr>
