--- a/Assignment3/Views/ComponentCategories/Delete.cshtml
+++ b/Assignment3/Views/ComponentCategories/Delete.cshtml
@@ -45,7 +45,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayName("Component Category Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Name)
