--- a/Assignment3/Views/ComponentCategories/Details.cshtml
+++ b/Assignment3/Views/ComponentCategories/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model Assignment3.Models.Category
+﻿@using Microsoft.EntityFrameworkCore
+@model Assignment3.Models.Category
 
 @{
     ViewData["Title"] = "Details";
@@ -42,7 +43,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayName("Component Category Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Name)
