--- a/Assignment3/Views/ComponentCategories/Edit.cshtml
+++ b/Assignment3/Views/ComponentCategories/Edit.cshtml
@@ -24,8 +24,6 @@
     <script src="~/js/wow.min.js"></script>
     <script src="~/js/custom.js"></script>
 </head>
-
-
 <body id="top">
 <div class="preloader">
     <div class="sk-spinner sk-spinner-wave">
@@ -46,7 +44,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CategoryId" />
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Component Category Name</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
@@ -60,9 +58,11 @@
 <div>
     <a asp-action="ComponentCategoriesIndex">Back to List</a>
 </div>
-
+</body>
+</html>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-</body>
-</html>
+
+
+
