--- a/Assignment3/Views/ComponentTypes/Create.cshtml
+++ b/Assignment3/Views/ComponentTypes/Create.cshtml
@@ -36,21 +36,21 @@
         <div class="sk-rect5"></div>
     </div>
 </div>
-<h2>Create</h2>
-
-<h4>ComponentType</h4>
+<h2>Create New Component Type</h2>
+<div class="container">
+<h4>Component Type</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ComponentName" class="control-label"></label>
+                <label asp-for="ComponentName" class="control-label">Component Name</label>
                 <input asp-for="ComponentName" class="form-control" />
                 <span asp-validation-for="ComponentName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ComponentInfo" class="control-label"></label>
+                <label asp-for="ComponentInfo" class="control-label">Component Info</label>
                 <input asp-for="ComponentInfo" class="form-control" />
                 <span asp-validation-for="ComponentInfo" class="text-danger"></span>
             </div>
@@ -61,7 +61,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
+                <select asp-for="Status" asp-items="@Html.GetEnumSelectList<ComponentStatus>()" class="form-control"></select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -70,7 +70,7 @@
                 <span asp-validation-for="Datasheet" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageUrl" class="control-label"></label>
+                <label asp-for="ImageUrl" class="control-label">Image Url/Image Source</label>
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
@@ -80,12 +80,12 @@
                 <span asp-validation-for="Manufacturer" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="WikiLink" class="control-label"></label>
+                <label asp-for="WikiLink" class="control-label">Wiki Link</label>
                 <input asp-for="WikiLink" class="form-control" />
                 <span asp-validation-for="WikiLink" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AdminComment" class="control-label"></label>
+                <label asp-for="AdminComment" class="control-label">Admin Comment</label>
                 <input asp-for="AdminComment" class="form-control" />
                 <span asp-validation-for="AdminComment" class="text-danger"></span>
             </div>
@@ -99,7 +99,7 @@
 <div>
     <a asp-action="ComponentTypesIndex">Back to List</a>
 </div>
-
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
