--- a/Assignment3/Views/ComponentTypes/Details.cshtml
+++ b/Assignment3/Views/ComponentTypes/Details.cshtml
@@ -36,20 +36,20 @@
         <div class="sk-rect5"></div>
     </div>
 </div>
-<h2>Details</h2>
+<h2>Component Type Details</h2>
 
 <div>
-    <h4>ComponentType</h4>
+    <h4>Component Type</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ComponentName)
+            @Html.DisplayName("Component Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ComponentName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ComponentInfo)
+            @Html.DisplayName("Component Info")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ComponentInfo)
@@ -73,7 +73,7 @@
             @Html.DisplayFor(model => model.Datasheet)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ImageUrl)
+            @Html.DisplayName("Image Url")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ImageUrl)
@@ -85,13 +85,13 @@
             @Html.DisplayFor(model => model.Manufacturer)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.WikiLink)
+            @Html.DisplayName("Wiki Link")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.WikiLink)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.AdminComment)
+            @Html.DisplayName("Admin Comment")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.AdminComment)
@@ -99,7 +99,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ComponentTypeId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ComponentTypeId">Edit Component Type</a> |
     <a asp-action="ComponentTypesIndex">Back to List</a>
 </div>
 </body>
