--- a/Assignment3/Views/ComponentCategories/ComponentCategoriesIndex.cshtml
+++ b/Assignment3/Views/ComponentCategories/ComponentCategoriesIndex.cshtml
@@ -58,8 +58,10 @@
                         @Html.DisplayFor(modelItem => item.Name)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
+                        <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a>
+                        <br />
+                        <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a>
+                        <br />
                         <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
                     </td>
                 </tr>
