--- a/Assignment3/Views/ComponentCategories/Create.cshtml
+++ b/Assignment3/Views/ComponentCategories/Create.cshtml
@@ -42,7 +42,7 @@
 <hr />
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-lg-4 col-md-4 col-sm-4">
         <img src="favicon.ico" />
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
