--- a/Assignment3/Views/ComponentCategories/Edit.cshtml
+++ b/Assignment3/Views/ComponentCategories/Edit.cshtml
@@ -39,7 +39,7 @@
 <h4>Category</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-lg-4 col-md-4 col-sm-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CategoryId" />
