--- a/Assignment3/Views/Components/Edit.cshtml
+++ b/Assignment3/Views/Components/Edit.cshtml
@@ -40,8 +40,8 @@
 
 <h4>Component</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container">
+    <div class="col-lg-12 col-md-12 col-sm-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ComponentId" />
