--- a/Assignment3/wwwroot/css/templatemo-style.css
+++ b/Assignment3/wwwroot/css/templatemo-style.css
@@ -1,7 +1,3 @@
-/*
-Awesome Template
-http://www.templatemo.com/preview/templatemo_450_awesome
-*/
 
 body
 	{
@@ -9,7 +5,6 @@ body
  		color: #ffffff;
 		font-family: 'Open Sans', sans-serif;
 		font-weight: 300;
-		overflow-x: hidden; /* prevent horizontal scrollbar from appearing */
 	}
 	
 a {
@@ -302,13 +297,13 @@ header .social-icon li a
 /* end team */
 
 /* start service */
-#service .col-md-4
+#service .col-lg-4 col-md-4 col-sm-4
 	{
 		padding: 40px;
 		-webkit-transition: all 0.4s ease-in-out;
 		        transition: all 0.4s ease-in-out;
 	}
-#service .col-md-4:hover
+#service .col-lg-4 col-md-4 col-sm-4:hover
 	{
 		background: #505050;
 	}
