--- a/Assignment3/Views/Login/Login.cshtml
+++ b/Assignment3/Views/Login/Login.cshtml
@@ -1,10 +1,13 @@
-﻿@{
+﻿@model Assignment3.Models.LoginModel
+
+@{
     ViewData["Title"] = "ITTWeb Assignment 3";
     Layout = "_Layout";
 
 }
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -36,11 +39,32 @@
         </div>
 
     </div>
-   
-    <div> @Html.ActionLink("REGISTER", "Register", "Register")</div>
 
-    <div>@Html.ActionLink("LOGIN", "Login", "Login")</div>
-    
+    <h4>Login</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Login">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Email" class="control-label"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password" class="control-label"></label>
+                    <input asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Login" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
+    </div>
 
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
 </body>
 </html>
