- Tirsdags work work work

--- a/Assignment3/Views/Home/Index.cshtml
+++ b/Assignment3/Views/Home/Index.cshtml
@@ -35,8 +35,9 @@
             <div class="sk-rect5"></div>
         </div>
     </div>
-    <div>
-        <h2 style="font-weight: bold">Embedded Stock</h2>
+    <div class="clearfix" style="text-align: center">
+        <h2 style="font-weight: bold; padding-bottom: 0">Embedded Stock</h2>
+        <hr style="padding-bottom: 10px" />
         <p style="font-weight: bold; font-size: larger">
             <div>Reservationer og søgning efter komponenter sker på hjemmesiden Stockmanager.ase.au.dk</div>
             <br />
