--- a/Assignment3/Views/ComponentCategories/Delete.cshtml
+++ b/Assignment3/Views/ComponentCategories/Delete.cshtml
@@ -52,7 +52,7 @@
         </dd>
     </dl>
 
-    <form asp-action="Delete">
+    <form asp-action="Delete" method="post">
         <input type="hidden" asp-for="CategoryId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="ComponentCategoriesIndex">Back to List</a>
