--- a/Assignment3/Views/ComponentCategories/Edit.cshtml
+++ b/Assignment3/Views/ComponentCategories/Edit.cshtml
@@ -40,7 +40,7 @@
 <hr />
 <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CategoryId" />
             <div class="form-group">
