--- a/Assignment3/Views/ComponentTypes/Delete.cshtml
+++ b/Assignment3/Views/ComponentTypes/Delete.cshtml
@@ -38,11 +38,11 @@
     </div>
     <h2>Delete Component Type</h2>
 
-    <h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this?</h3>
+<hr/>
 <div>
-    <h4>Component Type</h4>
-    <hr />
-    <dl class="dl-horizontal">
+    <h4 style="font-weight: bold">Component Type</h4>
+      <dl class="dl-horizontal">
         <dt>
             @Html.DisplayName("Component Name")
         </dt>
@@ -98,12 +98,18 @@
             @Html.DisplayFor(model => model.AdminComment)
         </dd>
     </dl>
-
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ComponentTypeId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="ComponentTypesIndex">Back to List</a>
-    </form>
+    
+    <div class="row">
+        <form asp-action="Delete" method="post">
+            <input type="hidden" asp-for="ComponentTypeId" value="@Model.ComponentTypeId" />
+            <div class="col-lg-2 col-md-3 col-sm-3" style="text-align:right">
+                <input type="submit" value="Delete" class="btn btn-danger" />
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-2" style="margin-top: 5px">
+                <a asp-action="ComponentTypesIndex">Back to List</a>
+            </div>
+        </form>
+    </div>
 </div>
 </body>
 </html>
