--- a/Assignment3/Views/ComponentTypes/Edit.cshtml
+++ b/Assignment3/Views/ComponentTypes/Edit.cshtml
@@ -27,83 +27,82 @@
 
 
 <body id="top">
-<div class="preloader">
-    <div class="sk-spinner sk-spinner-wave">
-        <div class="sk-rect1"></div>
-        <div class="sk-rect2"></div>
-        <div class="sk-rect3"></div>
-        <div class="sk-rect4"></div>
-        <div class="sk-rect5"></div>
+    <div class="preloader">
+        <div class="sk-spinner sk-spinner-wave">
+            <div class="sk-rect1"></div>
+            <div class="sk-rect2"></div>
+            <div class="sk-rect3"></div>
+            <div class="sk-rect4"></div>
+            <div class="sk-rect5"></div>
+        </div>
     </div>
-</div>
-<h2>Edit Component Type</h2>
+    <h2>Edit Component Type</h2>
 
-<h4>Component Type</h4>
-<hr />
-<div class="row">
-    <div class="col-lg-4 col-md-4 col-sm-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ComponentTypeId" />
-            <div class="form-group">
-                <label asp-for="ComponentName" class="control-label">Component Name</label>
-                <input asp-for="ComponentName" class="form-control" />
-                <span asp-validation-for="ComponentName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ComponentInfo" class="control-label">Component Info</label>
-                <input asp-for="ComponentInfo" class="form-control" />
-                <span asp-validation-for="ComponentInfo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Location" class="control-label"></label>
-                <input asp-for="Location" class="form-control" />
-                <span asp-validation-for="Location" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
+    <h4>Component Type</h4>
+    <hr />
+    <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-4">
+            <form asp-action="Edit" method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="ComponentTypeId" />
+                <div class="form-group">
+                    <label asp-for="ComponentName" class="control-label">Component Name</label>
+                    <input asp-for="ComponentName" class="form-control" />
+                    <span asp-validation-for="ComponentName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ComponentInfo" class="control-label">Component Info</label>
+                    <input asp-for="ComponentInfo" class="form-control" />
+                    <span asp-validation-for="ComponentInfo" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Location" class="control-label"></label>
+                    <input asp-for="Location" class="form-control" />
+                    <span asp-validation-for="Location" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Status" class="control-label"></label>
 
-                <select asp-for="Status" asp-items="@Html.GetEnumSelectList<ComponentTypeStatus>()" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Datasheet" class="control-label"></label>
-                <input asp-for="Datasheet" class="form-control" />
-                <span asp-validation-for="Datasheet" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ImageUrl" class="control-label">Image Url/Image Source</label>                <input asp-for="ImageUrl" class="form-control" />
-                <span asp-validation-for="ImageUrl" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Manufacturer" class="control-label"></label>
-                <input asp-for="Manufacturer" class="form-control" />
-                <span asp-validation-for="Manufacturer" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="WikiLink" class="control-label">Wiki Link</label>
-                <input asp-for="WikiLink" class="form-control" />
-                <span asp-validation-for="WikiLink" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-
-                <label asp-for="AdminComment" class="control-label">Admin Comment</label>
-                <input asp-for="AdminComment" class="form-control" />
-                <span asp-validation-for="AdminComment" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </form>
+                    <select asp-for="Status" asp-items="@(Html.GetEnumSelectList<ComponentTypeStatus>())" class="form-control"></select>
+                    <span asp-validation-for="Status" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Datasheet" class="control-label"></label>
+                    <input asp-for="Datasheet" class="form-control" />
+                    <span asp-validation-for="Datasheet" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ImageUrl" class="control-label">Image Url/Image Source</label>
+                    <input asp-for="ImageUrl" class="form-control" />
+                    <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Manufacturer" class="control-label"></label>
+                    <input asp-for="Manufacturer" class="form-control" />
+                    <span asp-validation-for="Manufacturer" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="WikiLink" class="control-label">Wiki Link</label>
+                    <input asp-for="WikiLink" class="form-control" />
+                    <span asp-validation-for="WikiLink" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="AdminComment" class="control-label">Admin Comment</label>
+                    <input asp-for="AdminComment" class="form-control" />
+                    <span asp-validation-for="AdminComment" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="ComponentTypesIndex">Back to List</a>
-</div>
-
+    <div>
+        <a asp-action="ComponentTypesIndex">Back to List</a>
+    </div>
+</body>
+</html>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-</body>
-</html>
