--- a/Assignment3/Views/Components/CreateComponent.cshtml
+++ b/Assignment3/Views/Components/CreateComponent.cshtml
@@ -26,70 +26,68 @@
 
 
 <body id="top">
-<div class="preloader">
-    <div class="sk-spinner sk-spinner-wave">
-        <div class="sk-rect1"></div>
-        <div class="sk-rect2"></div>
-        <div class="sk-rect3"></div>
-        <div class="sk-rect4"></div>
-        <div class="sk-rect5"></div>
-    </div>
-</div>
-
-<h2>Create</h2>
-<div class="container">
-    <h4>Component</h4>
-    <hr />
-    <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4">
-            <form asp-action="Create">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="ComponentTypeId" class="control-label">Component Type Id</label>
-                    <input asp-for="ComponentTypeId" class="form-control" />
-                    <span asp-validation-for="ComponentTypeId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="ComponentNumber" class="control-label">Component Number</label>
-                    <input asp-for="ComponentNumber" class="form-control" />
-                    <span asp-validation-for="ComponentNumber" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="SerialNo" class="control-label">Serial No</label>
-                    <input asp-for="SerialNo" class="form-control" />
-                    <span asp-validation-for="SerialNo" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Status" class="control-label"></label>
-                    <select asp-for="Status" class="form-control"></select>
-                    <span asp-validation-for="Status" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="AdminComment" class="control-label">Admin Comment</label>
-                    <input asp-for="AdminComment" class="form-control" />
-                    <span asp-validation-for="AdminComment" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="UserComment" class="control-label">User Comment</label>
-                    <input asp-for="UserComment" class="form-control" />
-                    <span asp-validation-for="UserComment" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="CurrentLoanInformationId" class="control-label">Current Loan Information Id</label>
-                    <input asp-for="CurrentLoanInformationId" class="form-control" />
-                    <span asp-validation-for="CurrentLoanInformationId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-default" />
-                </div>
-            </form>
+    <div class="preloader">
+        <div class="sk-spinner sk-spinner-wave">
+            <div class="sk-rect1"></div>
+            <div class="sk-rect2"></div>
+            <div class="sk-rect3"></div>
+            <div class="sk-rect4"></div>
+            <div class="sk-rect5"></div>
         </div>
     </div>
-</div>
 
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }
-
+    <h2>Create</h2>
+    <div class="container">
+        <h4>Component</h4>
+        <hr />
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+                <form asp-action="CreateComponent" method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="ComponentTypeId" class="control-label">Component Type Id</label>
+                        <input asp-for="ComponentTypeId" class="form-control" />
+                        <span asp-validation-for="ComponentTypeId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ComponentNumber" class="control-label">Component Number</label>
+                        <input asp-for="ComponentNumber" class="form-control" />
+                        <span asp-validation-for="ComponentNumber" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="SerialNo" class="control-label">Serial No</label>
+                        <input asp-for="SerialNo" class="form-control" />
+                        <span asp-validation-for="SerialNo" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Status" class="control-label"></label>
+                        <select asp-for="Status" asp-items="@(Html.GetEnumSelectList<ComponentStatus>())" class="form-control"></select>
+                        <span asp-validation-for="Status" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AdminComment" class="control-label">Admin Comment</label>
+                        <input asp-for="AdminComment" class="form-control" />
+                        <span asp-validation-for="AdminComment" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserComment" class="control-label">User Comment</label>
+                        <input asp-for="UserComment" class="form-control" />
+                        <span asp-validation-for="UserComment" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="CurrentLoanInformationId" class="control-label">Current Loan Information Id</label>
+                        <input asp-for="CurrentLoanInformationId" class="form-control" />
+                        <span asp-validation-for="CurrentLoanInformationId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-default" />
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
