--- a/Assignment3/Views/Components/Delete.cshtml
+++ b/Assignment3/Views/Components/Delete.cshtml
@@ -87,7 +87,7 @@
         </dd>
     </dl>
 
-    <form asp-action="Delete">
+    <form asp-action="Delete" method="post">
         <input type="hidden" asp-for="ComponentId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="ComponentsIndex">Back to List</a>
