--- a/Assignment3/Views/ComponentCategories/Details.cshtml
+++ b/Assignment3/Views/ComponentCategories/Details.cshtml
@@ -2,7 +2,7 @@
 @model Assignment3.Models.Category
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Component Category Details";
     Layout = "_Layout";
 
 }
