--- a/Assignment3/Views/ComponentCategories/Edit.cshtml
+++ b/Assignment3/Views/ComponentCategories/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Assignment3.Models.Category
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Component Category";
     Layout = "_Layout";
 
 }
