--- a/Assignment3/Views/ComponentCategories/List.cshtml
+++ b/Assignment3/Views/ComponentCategories/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Assignment3.ViewModels.ComponentTypeListViewModel
 
 @{
-    ViewData["Title"] = "List";
+    ViewData["Title"] = "Component Category List";
     Layout = "_Layout";
 
 }
