--- a/Assignment3/Views/ComponentTypes/Delete.cshtml
+++ b/Assignment3/Views/ComponentTypes/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Assignment3.Models.ComponentType
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Component Type";
     Layout = "_Layout";
 
 }
