--- a/Assignment3/Views/ComponentTypes/Details.cshtml
+++ b/Assignment3/Views/ComponentTypes/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Assignment3.Models.ComponentType
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Component Type Details";
     Layout = "_Layout";
 
 }
