--- a/Assignment3/Views/Components/Delete.cshtml
+++ b/Assignment3/Views/Components/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Assignment3.Models.Component
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Component";
     Layout = "_Layout";
 
 }
