--- a/Assignment3/Views/Components/Details.cshtml
+++ b/Assignment3/Views/Components/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Assignment3.Models.Component
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Component Details";
     Layout = "_Layout";
 
 }
