--- a/Assignment3/Views/ComponentCategories/ComponentCategoriesIndex.cshtml
+++ b/Assignment3/Views/ComponentCategories/ComponentCategoriesIndex.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Assignment3.Models.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Component Categories";
     Layout = "_Layout";
 }
 
