--- a/Assignment3/Views/ComponentCategories/Create.cshtml
+++ b/Assignment3/Views/ComponentCategories/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Assignment3.Models.Category
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create New Component Category";
     Layout = "_Layout";
 }
 <html>
@@ -22,9 +22,7 @@
     <script src="~/js/typed.js"></script>
     <script src="~/js/wow.min.js"></script>
     <script src="~/js/custom.js"></script>
-
 </head>
-
 
 <body id="top">
     <div class="preloader">
@@ -36,12 +34,9 @@
             <div class="sk-rect5"></div>
         </div>
     </div>
-
     <h2>Create</h2>
-
     <h4>Category</h4>
     <hr />
-
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4">
             <form asp-action="Create" method="post">
@@ -57,8 +52,6 @@
             </form>
         </div>
     </div>
-
-
     <div>
         <a asp-action="ComponentCategoriesIndex">Back to List</a>
     </div>
@@ -66,4 +59,4 @@
 </html>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-
+}
