--- a/Assignment3/Views/ComponentCategories/Delete.cshtml
+++ b/Assignment3/Views/ComponentCategories/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Assignment3.Models.Category
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Component Category";
     Layout = "_Layout";
 
 }
