--- a/Assignment3/Views/ComponentTypes/Create.cshtml
+++ b/Assignment3/Views/ComponentTypes/Create.cshtml
@@ -2,7 +2,7 @@
 @model Assignment3.ViewModels.ComponentTypeViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create new Component Type";
     Layout = "_Layout";
 
 }
@@ -78,7 +78,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Image" class="control-label">Upload Your Image</label>
-                        <input type="file" asp-for="Image" class="form-control" />
+                        <input type="file" accept="image/*" asp-for="Image" class="form-control" />
                     </div>
                     <div class="form-group">
                         <label asp-for="Manufacturer" class="control-label"></label>
@@ -111,5 +111,13 @@
 </body>
 </html>
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        if (ViewBag.ImgError != null)
+        {
+            <script type="text/javascript">
+                alert("@ViewBag.ImgError");
+            </script>
+        }
+    }
 }
