--- a/Assignment3/Views/ComponentTypes/Edit.cshtml
+++ b/Assignment3/Views/ComponentTypes/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Assignment3.Models.ComponentType
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Component Type";
     Layout = "_Layout";
 
 }
