--- a/Assignment3/Views/Components/ComponentsIndex.cshtml
+++ b/Assignment3/Views/Components/ComponentsIndex.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Assignment3.Models.Component>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Components";
     Layout = "_Layout";
 }
 <html>
