--- a/Assignment3/Views/Components/Edit.cshtml
+++ b/Assignment3/Views/Components/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Assignment3.Models.Component
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Component";
     Layout = "_Layout";
 
 }
