So basically i am a god

--- a/Assignment3/Views/ComponentCategories/Delete.cshtml
+++ b/Assignment3/Views/ComponentCategories/Delete.cshtml
@@ -54,8 +54,8 @@
 
     <form asp-action="Delete" method="post">
         <input type="hidden" asp-for="CategoryId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="ComponentCategoriesIndex">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="ComponentCategoriesIndex" class="btn btn-primary">Back to List</a>
     </form>
 </div>
 </body>
