--- a/Assignment3/Views/ComponentCategories/List.cshtml
+++ b/Assignment3/Views/ComponentCategories/List.cshtml
@@ -60,7 +60,7 @@
     }
 </div>
 <div>
-    <a asp-action="ComponentCategoriesIndex">Back to List</a>
+    <a asp-action="ComponentCategoriesIndex" class="btn btn-primary">Back to List</a>
 </div>
 </body>
 </html>
