--- a/Assignment3/Views/Components/Details.cshtml
+++ b/Assignment3/Views/Components/Details.cshtml
@@ -87,8 +87,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ComponentId">Edit</a> |
-    <a asp-action="ComponentsIndex">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.ComponentId" class="btn btn-default">Edit</a> |
+    <a asp-action="ComponentsIndex" class="btn btn-primary">Back to List</a>
 </div>
 </body>
 </html>
