--- a/Assignment3/Views/ComponentCategories/Create.cshtml
+++ b/Assignment3/Views/ComponentCategories/Create.cshtml
@@ -47,13 +47,13 @@
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Create" class="btn btn-success" />
                 </div>
             </form>
         </div>
     </div>
     <div>
-        <a asp-action="ComponentCategoriesIndex">Back to List</a>
+        <a asp-action="ComponentCategoriesIndex" class="btn btn-primary">Back to List</a>
     </div>
 </body>
 </html>
