--- a/Assignment3/Views/ComponentCategories/Details.cshtml
+++ b/Assignment3/Views/ComponentCategories/Details.cshtml
@@ -51,8 +51,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.CategoryId">Edit</a> |
-    <a asp-action="ComponentCategoriesIndex">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.CategoryId" class="btn btn-default">Edit</a> |
+    <a asp-action="ComponentCategoriesIndex" class="btn btn-primary">Back to List</a>
 </div>
 </body>
 </html>
