--- a/Assignment3/Views/ComponentCategories/Edit.cshtml
+++ b/Assignment3/Views/ComponentCategories/Edit.cshtml
@@ -49,14 +49,14 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="ComponentCategoriesIndex">Back to List</a>
+    <a asp-action="ComponentCategoriesIndex" class="btn btn-primary">Back to List</a>
 </div>
 </body>
 </html>
