--- a/Assignment3/Views/ComponentTypes/Create.cshtml
+++ b/Assignment3/Views/ComponentTypes/Create.cshtml
@@ -98,14 +98,14 @@
                         <span asp-validation-for="AdminComment" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-default" />
+                        <input type="submit" value="Create" class="btn btn-success" />
                     </div>
                 </form>
             </div>
         </div>
 
         <div>
-            <a asp-action="ComponentTypesIndex">Back to List</a>
+            <a asp-action="ComponentTypesIndex" class="btn btn-primary">Back to List</a>
         </div>
     </div>
 </body>
