--- a/Assignment3/Views/ComponentTypes/Delete.cshtml
+++ b/Assignment3/Views/ComponentTypes/Delete.cshtml
@@ -38,78 +38,94 @@
     </div>
     <h2>Delete Component Type</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<hr/>
-<div>
-    <h4 style="font-weight: bold">Component Type</h4>
-      <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayName("Component Name")
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ComponentName)
-        </dd>
-        <dt>
-            @Html.DisplayName("Component Info")
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ComponentInfo)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Location)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Location)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Datasheet)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Datasheet)
-        </dd>
-        <dt>
-            @Html.DisplayName("Image Url")
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ImageUrl)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Manufacturer)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Manufacturer)
-        </dd>
-        <dt>
-            @Html.DisplayName("Wiki Link")
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.WikiLink)
-        </dd>
-        <dt>
-            @Html.DisplayName("Admin Comment")
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.AdminComment)
-        </dd>
-    </dl>
-    
-    <div class="row">
-        <form asp-action="Delete" method="post">
-            <input type="hidden" asp-for="ComponentTypeId" value="@Model.ComponentTypeId" />
-            <div class="col-lg-2 col-md-3 col-sm-3" style="text-align:right">
-                <input type="submit" value="Delete" class="btn btn-danger" />
+    <h3>Are you sure you want to delete this?</h3>
+    <hr />
+    <div>
+        <h4 style="font-weight: bold">Component Type</h4>
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayName("Image")
+            </dt>
+            <dd>
+                @if (Model.Image != null)
+                {
+                    var imgsourceFromUrlActions = Url.Action("GetImgFromComponentType", "ComponentTypes", new { id = Model.ComponentTypeId });
+
+                    <img src="@imgsourceFromUrlActions" alt="@Model.FileName" height="200" width="200" />
+                }
+            </dd>
+            <dt>
+                @Html.DisplayName("Component Name")
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ComponentName)
+            </dd>
+            <dt>
+                @Html.DisplayName("Component Info")
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ComponentInfo)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Location)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Location)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Status)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Status)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Datasheet)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Datasheet)
+            </dd>
+            <dt>
+                @Html.DisplayName("Image Url")
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ImageUrl)
+            </dd>
+            <dd>
+                @Html.DisplayFor(model => model.ImageUrl)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Manufacturer)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Manufacturer)
+            </dd>
+            <dt>
+                @Html.DisplayName("Wiki Link")
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.WikiLink)
+            </dd>
+            <dt>
+                @Html.DisplayName("Admin Comment")
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.AdminComment)
+            </dd>
+        </dl>
+
+        <div class="row">
+            @using (Html.BeginForm("Delete", "ComponentTypes", FormMethod.Post))
+            {
+                @Html.Hidden("id", Model.ComponentTypeId)
+                <div class="col-lg-2 col-md-2 col-sm-2" style="text-align: right">
+                    <input type="submit" value="Delete" class="btn btn-danger" />
+                </div>
+            }
+            <div class="col-lg-2 col-md-2 col-sm-2" style="text-align: left">
+                <a asp-action="ComponentTypesIndex" class="btn btn-primary">Back to List</a>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-2" style="margin-top: 5px">
-                <a asp-action="ComponentTypesIndex">Back to List</a>
-            </div>
-        </form>
+
+        </div>
     </div>
-</div>
 </body>
 </html>
