--- a/Assignment3/Views/ComponentTypes/Edit.cshtml
+++ b/Assignment3/Views/ComponentTypes/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Assignment3.Models.ComponentType
+﻿@model Assignment3.ViewModels.ComponentTypeViewModel
 
 @{
     ViewData["Title"] = "Edit Component Type";
@@ -42,9 +42,8 @@
     <hr />
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4">
-            <form asp-action="Edit" method="post">
+            <form asp-action="Edit" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="ComponentTypeId" />
                 <div class="form-group">
                     <label asp-for="ComponentName" class="control-label">Component Name</label>
                     <input asp-for="ComponentName" class="form-control" />
@@ -77,6 +76,14 @@
                     <span asp-validation-for="ImageUrl" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="Image" class="control-label">Upload Your Image</label>
+                   
+                    <input type="file" accept="image/*" asp-for="Image" class="form-control" />
+                </div>
+                <div class="form-group" >
+                    @Html.LabelFor(x => x.Image.FileName, "Current Image: " + Model.Image.FileName)
+                </div>
+                <div class="form-group">
                     <label asp-for="Manufacturer" class="control-label"></label>
                     <input asp-for="Manufacturer" class="form-control" />
                     <span asp-validation-for="Manufacturer" class="text-danger"></span>
@@ -92,17 +99,25 @@
                     <span asp-validation-for="AdminComment" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Save" class="btn btn-success" />
                 </div>
             </form>
         </div>
     </div>
 
     <div>
-        <a asp-action="ComponentTypesIndex">Back to List</a>
+        <a asp-action="ComponentTypesIndex" class="btn btn-primary">Back to List</a>
     </div>
 </body>
 </html>
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        if (ViewBag.ImgError != null)
+        {
+            <script type="text/javascript">
+                alert("@ViewBag.ImgError");
+            </script>
+        }
+    }
 }
