--- a/Assignment3/Views/Components/CreateComponent.cshtml
+++ b/Assignment3/Views/Components/CreateComponent.cshtml
@@ -80,9 +80,13 @@
                         <span asp-validation-for="CurrentLoanInformationId" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-default" />
+                        <input type="submit" value="Create" class="btn btn-success" />
                     </div>
                 </form>
+                
+                <div>
+                    <a asp-action="ComponentIndex" class="btn btn-primary">Back to List</a>
+                </div>
             </div>
         </div>
     </div>
