--- a/Assignment3/Views/Components/Delete.cshtml
+++ b/Assignment3/Views/Components/Delete.cshtml
@@ -89,8 +89,8 @@
 
     <form asp-action="Delete" method="post">
         <input type="hidden" asp-for="ComponentId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="ComponentsIndex">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="ComponentsIndex" class="btn btn-primary">Back to List</a>
     </form>
 </div>
 </body>
