--- a/Assignment3/Views/Components/Edit.cshtml
+++ b/Assignment3/Views/Components/Edit.cshtml
@@ -81,14 +81,14 @@
                     <span asp-validation-for="CurrentLoanInformationId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Save" class="btn btn-success" />
                 </div>
             </form>
         </div>
     </div>
 
     <div>
-        <a asp-action="ComponentsIndex">Back to List</a>
+        <a asp-action="ComponentsIndex" class="btn btn-primary">Back to List</a>
     </div>
 </body>
 </html>
