--- a/Assignment3/Views/ComponentTypes/Create.cshtml
+++ b/Assignment3/Views/ComponentTypes/Create.cshtml
@@ -63,7 +63,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Status" class="control-label"></label>
-                        <select asp-for="Status" asp-items="@(Html.GetEnumSelectList<ComponentTypeStatus>())" class="form-control"></select> 
+                        <select asp-for="Status" asp-items="@(Html.GetEnumSelectList<ComponentTypeStatus>())" class="form-control"></select>
                         <span asp-validation-for="Status" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -96,6 +96,10 @@
                         <label asp-for="AdminComment" class="control-label">Admin Comment</label>
                         <input asp-for="AdminComment" class="form-control" />
                         <span asp-validation-for="AdminComment" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        @*@Html.ListBoxFor(x => x.SelectedCategories, Model.Categories, new { style = "width: 350px", multiple = "multiple", required = true, @class = "form-control" })*@
+                        @Html.ListBoxFor(x => x.SelectedCategories, new MultiSelectList(Model.Categories.Select(x => x.CategoryId)), new { @class = "form-control" })
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Create" class="btn btn-success" />
