--- a/Assignment3/Views/Login/Login.cshtml
+++ b/Assignment3/Views/Login/Login.cshtml
@@ -2,8 +2,7 @@
 
 @{
     ViewData["Title"] = "ITTWeb Assignment 3";
-    Layout = "_Layout";
-
+    Layout = "_LayoutRestricted";
 }
 
 <!DOCTYPE html>
@@ -48,16 +47,20 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Email" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" />
+                    <input asp-for="Email" class="form-control" required />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Password" class="control-label"></label>
-                    <input asp-for="Password" class="form-control" />
+                    <input asp-for="Password" class="form-control" required />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Login" class="btn btn-default" />
+                    <input type="button" class="btn btn-default" value="Register" onclick="location.href='@Url.Action("Register", "Register")'">
+                </div>
+                <div>
+
                 </div>
             </form>
         </div>
