--- a/Assignment3/Views/ComponentTypes/Create.cshtml
+++ b/Assignment3/Views/ComponentTypes/Create.cshtml
@@ -99,7 +99,7 @@
                     </div>
                     <div class="form-group">
                         @*@Html.ListBoxFor(x => x.SelectedCategories, Model.Categories, new { style = "width: 350px", multiple = "multiple", required = true, @class = "form-control" })*@
-                        @Html.ListBoxFor(x => x.SelectedCategories, new MultiSelectList(Model.Categories.Select(x => x.CategoryId)), new { @class = "form-control" })
+                        @Html.ListBoxFor(x => x.SelectedCategories, Model.Categories, new { @class = "form-control", multiple="multiple"})
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Create" class="btn btn-success" />
