--- a/Assignment3/Views/Components/Delete.cshtml
+++ b/Assignment3/Views/Components/Delete.cshtml
@@ -44,10 +44,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ComponentTypeId)
+            @Html.DisplayNameFor(model => model.ComponentTypeIdsList.LastOrDefault())
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ComponentTypeId)
+            @Html.DisplayFor(model => model.ComponentTypeIdsList.LastOrDefault())
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ComponentNumber)
