--- a/Assignment3/Views/Shared/Error.cshtml
+++ b/Assignment3/Views/Shared/Error.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Error - Possibly Unauthorized";
 }
 
 <h1 class="text-danger">Error.</h1>
